[package]
name = "minecraft-prometheus-exporter"
version = "1.1.0"
edition = "2018"
authors = ["Jamie Quigley <jamie@quigley.xyz>"]
license = "MPL-2.0"
description = "A prometheus exporter for minecraft servers"
repository = "https://github.com/Sciencentistguy/minecraft-prometheus-exporter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
clap = { version = "3.0.14", features = ["derive"] }
eyre = "0.6.6"
once_cell = "1.9.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1.30"
tracing-subscriber = "0.3.11"
walkdir = "2.3.2"
warp = "0.3.2"
